--- a/frontend/PlaylocalUI.html
+++ b/frontend/PlaylocalUI.html
@@ -7,6 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
 </head>
+<script src="PlaylocalUI.js" type="module"></script>
 <body class="bg-gray-100 h-screen w-full overflow-hidden">
 
   <!-- Top Bar -->
